# testrunner

./: Dockerfile  dev.ipynb  entrypoint.py  pyproject.toml  requirements.txt  test_entry.py
input/: sort.py
testrunner/: core.py  models.py  pyproject.toml  python_policy.py
testrunner/data/: sort.toml
tests/: core_test.py  hello_world.py
tests/testdata/: compile_error.py  runtime_error.py  sort.py
