[tool.poetry]
name = "testrunner"
version = "0.1.0"
description = ""
authors = ["ziegnes <ziegnes@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.4.2"
restrictedpython = "^6.2"
shared = { path = "../shared", develop = true }


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
norecursedirs = ["testrunner"]